--- a/client/index.html
+++ b/client/index.html
@@ -246,18 +246,9 @@
                             <label for="input-sponsor">Sponsor</label>
                             <input type="text" class="form-control" id="input-sponsor" aria-describedby="Sponsor">
                         </div>
-                        <div class="input-group">
-                            <div class="custom-file">
-                                <input type="text" id="input-audio" class="custom-file-input"
-                                    aria-describedby="inputGroupFileAddon04" required>
-                                <label class="custom-file-label" id="label-audio" for="inputGroupFile04">Inserisci file
-                                    audio</label>
-                            </div>
-
-                            <div class="input-group-append">
-                                <button class="btn btn-outline-secondary" type="button"
-                                    id="inputGroupFileAddon04">Carica</button>
-                            </div>
+                        <div class="form-group">
+                            <label for="input-sponsor">Audio</label>
+                            <input type="text" class="form-control" id="input-audio" aria-describedby="Audio">
                         </div>
                         <div class="form-group mt-2">
                             <label for="inputDescription">Prezzo</label>
