--- a/client/index.html
+++ b/client/index.html
@@ -195,8 +195,7 @@
                         </div>
                         <div class="input-group mb-3">
 
-                            <select class="custom-select" id="serie-categorie">
-                                <option value="" selected disabled hidden>Scegli categoria</option>
+                            <select class="custom-select" id="serie-categorie" required>
                                 <option value="ARTE">ARTE</option>
                                 <option value="MUSICA">MUSICA</option>
                                 <option value="SALUTE">SALUTE</option>
@@ -248,7 +247,7 @@
                         </div>
                         <div class="form-group">
                             <label for="input-sponsor">Audio</label>
-                            <input type="text" class="form-control" id="input-audio" aria-describedby="Audio">
+                            <input type="text" class="form-control" id="input-audio" aria-describedby="Audio" required>
                         </div>
                         <div class="form-group mt-2">
                             <label for="inputDescription">Prezzo</label>
